css/style.css
/* ... */
/* small image for jacket see also */
.small {
  display: contents;
}

.box {
  flex-direction: column;
  align-items: center;
  max-width: 100%;
}
.hidden {
  display: none;
}
.cta,
.buy {
  margin: 10px auto;
  align-self: center;
  height: auto;
}
/*about us index (and text align for footer)*/
.index-about,
footer {
  text-align: center;
}
.index-about p {
  padding: 5px 50px;
}
/* made the cta an inline-block here so it would accept margin */
.index-about a {
  display: inline-block;
  margin: 10px;
}
/*footer*/
footer {
  background-color: #009788;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-areas:
    "location social newsletter"
    "location social newsletter"
    ". info .";
}
#location {
  grid-area: location;
}
#location p {
  margin: 5px 0;
}
.social-media {
  grid-area: social;
  font-size: 4vw;
}
.social-media i {
  font-size: 4vw;
}
.newsletter {
  grid-area: newsletter;
  padding: 20px 0;
}
#location,
.social-media,
.newsletter {
  margin: auto;
}
#info {
  grid-area: info;
}
/*for now only used on footer  will probably be a global element later*/
footer form > * {
  display: block;
  margin: 0 auto;
}
button {
  border: solid 1px #f68c64;
  background: #f68c64;
  border-radius: 20px;
  padding: 5px 25px;
  color: black;
}
input[type="email"] {
  display: inline-block;
  border: solid 1px white;

  border-radius: 5px;
  width: 90px;
  margin: 0 0 10px 0;
}
input[type="email"]:focus {
  outline: none;
  border: solid 1px #000;
}
/* collection page */
.products {
  display: flex;
  flex-direction: column;
  background-color: #009788;
}
/* *collection* to put the cta and price on same line*/

.products .box {
  padding: 20px;
  border-bottom: solid 1px #67dffb;
}
/*make the collection site  buttons a little bit bigger */
.products a {
  padding: 5px 30px;
}
.buy {
  display: none;
}
/* jacket site */
/*setting right grid on jacket*/
#jacket .featured {
  grid-template-rows: auto auto;
}
#jacket h3 {
  grid-row: 1/2;
  grid-column: 1/3;
}
.jacket .box {
  background-color: #009788;
}
.jacket h1 {
  background-color: #009788;
  margin: 0;
  padding: 20px 0;
}
.price-cta {
  grid-template-columns: 1fr 0.5fr;
}
.price-cta .cta {
  grid-column: 1/3;
}
.size {
  grid-column: 1/2;
  grid-row: 1/2;
  align-self: flex-start;
}
.cta a,
.buy a {
  padding: 10px 30px;
}
.jacket-info p {
  margin: 0 auto;
  padding: 0px 20px;
  max-width: 400px;
}
/* buttons on jacket site*/
input[type="radio"] {
  opacity: 0;
  margin: 0;
  height: 0px;
  width: 0px;
}

span {
  position: absolute;
  width: 7vw;
  height: 7vw;
  background-color: #fff;
  border: solid 3px #f68c64;
  border-radius: 50%;
  text-align: center;
  font-size: 5vw;
  line-height: 7vw;
  margin: 0;
  max-width: 100%;
}

.jacket form {
  height: 40px;
  margin-top: 10px;
}
.jacket label {
  display: block;
  position: relative;
  cursor: pointer;
  margin: 0 5px;
  max-width: 100%;
  width: 100%;
}
label:first-child {
  margin-left: 0;
}

span:hover {
  opacity: 1;
  background-color: #f68c64;
  color: white;
}

input[type="radio"]:checked ~ span {
  color: #fff;
  background-color: #f68c64;
}
/*checkout page */
.product-banner {
  padding: 5px 20px;
  justify-content: space-between;
  border-top: solid 1px #67dffb;
  border-bottom: solid 1px #67dffb;
  align-items: center;
}
.product-banner i {
  font-size: 30px;
}
.card {
  margin: 0 5%;
  gap: 3px;
  grid-template-columns: 1fr 0.1fr 1fr;
  grid-template-areas:
    "name . ."
    "number . ."
    "exp . ."
    "cvv save save";
  align-items: center;
}
.card input,
.delivery input {
  border: solid 1px #000;
  padding: 10px;
}
/* grid area for first form */
#cardname {
  grid-area: name;
}
#cardnumber {
  grid-area: number;
}
#expired {
  grid-area: exp;
}
#cvv {
  grid-area: cvv;
}
.save {
  grid-area: save;
  align-items: center;
}
.card label {
  grid-area: lab;
}
.delivery {
  margin: 0 5%;
  gap: 3px;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-areas:
    "name name . . "
    "email email info info"
    "adress adress . ."
    "small . . ."
    "small . . ."
    ". order order .";
}
.delivery input {
  margin: 0px;
  width: 100%;
  box-sizing: border-box;
}
#name {
  grid-area: name;
}
#email {
  grid-area: email;
  border-radius: 0px;
  width: 100%;
}
.delivery label {
  grid-area: info;
}
#adress {
  grid-area: adress;
}
.short {
  grid-area: small;
  flex-direction: column;
  row-gap: 3px;
}
.delivery button {
  grid-area: order;
  padding: 10px 25px;
  width: 40%;
  margin: 0 auto;
}
/* checkout complete */
#checkout-complete {
  max-width: 100%;
  flex-direction: column;
  align-items: center;
  margin: 30px 0;
}
#complete-info {
  flex-direction: column;
  text-align: center;
}
#complete-info button {
  align-items: center;
  gap: 5px;
  background-color: transparent;
  border: solid 1px black;
  border-radius: 0px;
  padding: 5px 5px;
}
/*about us */
.hero {
  position: relative;
}
#about-us p {
  padding: 5px 10px;
}
/* unsure about this 
#about-us .content-top {
  height: 10%;
  width: 100%;
  top: 15%;
  
}
*/
/* contact */
#contact-us article {
  border-top: 1px solid #67dffb;
  border-bottom: 1px solid #67dffb;
  padding-left: 5px;
  padding-bottom: 10px;
}
#contact-us article a {
  background-color: transparent;
  border-color: black;
  border-radius: 0px;
  color: black;
}
/* ... */

